# wadjet

./: README.md  components.py  optimise.py  pyproject.toml  test.py  wadjet.py
tests/: test.py
wadjet/: components.py  graphics.py  optimise.py  wadjet.py
